tf/tf-aws-get-started/learn-tf-with-aws-ec2/main-ec2.tf
# EC2 instance declaration
resource "aws_instance" "app_server" {
    ami = "ami-08d70e59c07c61a3a"
    instance_type = "t2.micro"
}
